# boltz2-jax

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
configs/: default.yaml
docs/: AF3_LONG_SEQUENCE_ANALYSIS.md  OPTIMIZATION.md  PORTING_PLAN.md
scripts/: bench_af3_superblock.py  benchmark_affinity_e2e.py  benchmark_bf16_activation.py  benchmark_boltz2_graph.py  benchmark_checkpoint_blocks.py  benchmark_diffusion_score.py  benchmark_eager_vs_torch.py  benchmark_flash_sampling_scale.py  benchmark_length_precision_sweep.py  benchmark_metric_drift.py  benchmark_micro_modules.py  benchmark_precision.py  benchmark_sampling_fullgraph.py  benchmark_speed_opt.py  benchmark_triangle_backend_e2e.py  check_geometry.py  check_native_parity.py  check_padding_invariance.py  check_padding_invariance_multichain.py  check_scan_aug_and_latency.py  check_sharding.py  compare_integrin9_matrix.py  compare_sampling_rmsd.py  crystal_rmsd.py  crystal_rmsd_pdb.py  drift_localize.py  export_native_weights.py  featurize.py  featurize_standalone.py  infer_one.py  inspect_checkpoint.py  make_affinity_feats.py  make_features.py  make_job_yaml.py  make_multimer_feats.py  parity_token_proj.py  predict.py  preprocess_standalone.py  repro_oom2048.py  run_standalone_inference.py  (+7 more)
src/boltz_jax/: __init__.py  api.py  config.py
src/boltz_jax/benchmark/: __init__.py  memory.py
src/boltz_jax/bridge/: __init__.py  affinity_mapping.py  confidence_mapping.py  native.py  torch_checkpoint.py  torch_mapping.py
src/boltz_jax/data/: __init__.py  _external.py  bucket.py  featurize.py  job_yaml.py  mol.py  preprocess.py  types.py
src/boltz_jax/models/: __init__.py  atom.py  attention.py  conditioning.py  diffusion.py  diffusion_conditioning.py  diffusion_transformer.py  input_embedder.py  micro_modules.py  msa.py  pairformer.py  predict.py  transition.py  triangle.py  triangle_attention.py  trunk.py
tests/: conftest.py  test_affinity_checkpoint_parity.py  test_atom_attention_checkpoint_parity.py  test_atom_transformer_checkpoint_parity.py  test_attention_checkpoint_parity.py  test_attention_chunk_parity.py  test_bfactor_checkpoint_parity.py  test_conditioning_checkpoint_parity.py  test_confidence_checkpoint_parity.py  test_diffusion_conditioning_checkpoint_parity.py  test_diffusion_score_checkpoint_parity.py  test_diffusion_transformer_checkpoint_parity.py  test_distogram_checkpoint_parity.py  test_end_to_end_sample_smoke.py  test_import.py  test_input_embedder_checkpoint_parity.py  test_micro_modules.py  test_msa_checkpoint_parity.py  test_pairformer_layer_checkpoint_parity.py  test_pairformer_module_checkpoint_parity.py  test_potentials_parity.py  test_predict_wrapper.py  test_template_parity.py  test_transition_checkpoint_parity.py  test_transition_forward.py  test_transition_mapping.py  test_transition_row_chunk_parity.py  test_triangle_attention_checkpoint_parity.py  test_triangle_attention_chunk_parity.py  test_triangle_checkpoint_parity.py  test_trunk_checkpoint_parity.py  test_weighted_rigid_align_parity.py
(+47 files in other folders)
