[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boltz-jax"
version = "0.1.0"
description = "Experimental JAX inference engine for Boltz-2"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chex>=0.1.86",
    "einops>=0.8.0",
    "jax>=0.7.1",
    "jaxtyping>=0.2.34",
    "numpy>=2.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.8.0",
    "tokamax>=0.0.12",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.7.1"]
cuda13 = ["jax[cuda13]>=0.7.1"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]
torch-bridge = [
    "torch>=2.2",
    "pytorch-lightning>=2.5.0",
    "hydra-core==1.3.2",
    # Featurization core (boltz_jax.data) deps; dev-time only, off the JAX path.
    "numba==0.61.0",
    "rdkit>=2024.3.2",
    "chembl_structure_pipeline>=1.2",  # ligand standardization (schema.py)
    "scipy>=1.13",
    "mashumaro==3.14",
    # Increment-2 input preprocessing (boltz_jax.data.parse) deps:
    "gemmi>=0.6",         # mmcif/pdb structure parsing
    "ihm>=1.0",           # mmcif (CIF) structure writer (data/write/mmcif.py)
    "modelcif>=1.0",      # mmcif (CIF) ModelCIF writer (data/write/mmcif.py)
    "biopython>=1.83",    # Bio.SeqIO (fasta), Bio.Align (template path)
    "scikit-learn>=1.3",  # sklearn KDTree (mmcif interfaces)
    "pandas>=2.0",        # parse/csv.py MSA reader
    "requests>=2.31",     # data/msa/mmseqs2.py colabfold MSA-server client
]

[project.scripts]
boltz-jax-inspect-checkpoint = "boltz_jax.bridge.torch_checkpoint:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
# src/boltz_jax/data/ is vendored verbatim from Boltz (MIT); keep upstream style.
extend-exclude = ["src/boltz_jax/data"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end / checkpoint-heavy tests",
]

[dependency-groups]
dev = [
    "einx>=0.4.3",
]
